--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="cache-control" content="public">
   <meta http-equiv="expires" content="{{'now' | date: '%s' | plus: 600 | date_to_rfc822}}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
