--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -10,3 +10,15 @@
   ga('send', 'pageview');
 
 </script>
+<script type="text/javascript">
+  (function() { 
+    var d = document, s = d.createElement('script');
+    s.src = '//codeharddrinkhard.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date())
+    (d.head || d.body).appendChild(s);
+  })();
+</script>
+<noscript>
+  Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a>
+</noscript>
+<script id="dsq-count-scr" src="//codeharddrinkhard.disqus.com/count.js" async></script>
