--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,5 +14,7 @@ layout: default
   <div class="post-content container" itemprop="articleBody">
     {{ content }}
   </div>
+  <div id="disqus_thread"></div>
+
 
 </article>
