--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -10,7 +10,7 @@
   ga('send', 'pageview');
 
 </script>
-<script type="text/javascript">
+<script>
   (function() { 
     var d = document, s = d.createElement('script');
     s.src = '//codeharddrinkhard.disqus.com/embed.js';
