--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -12,7 +12,8 @@
 </script>
 <script>
   (function() { 
-    var d = document, s = d.createElement('script');
+    var d = document;
+    var s = d.createElement('script');
     s.src = '//codeharddrinkhard.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date())
     (d.head || d.body).appendChild(s);
