--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -12,11 +12,10 @@
 </script>
 <script>
   (function() { 
-    var d = document;
-    var s = d.createElement('script');
+    var s = document.createElement('script');
     s.src = '//codeharddrinkhard.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date())
-    (d.head || d.body).appendChild(s);
+    (document.head || document.body).appendChild(s);
   })();
 </script>
 <noscript>
