--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,19 @@ layout: default
     {{ content }}
   </div>
   <div id="disqus_thread"></div>
-
+  <script>
+    var disqus_config = function () {
+      this.page.url = window.location.href;
+      this.page.identifier = window.location.pathname;
+      this.page.title = 'Comments';
+    };
+    (function() { 
+      var s = document.createElement('script');
+      alert(s);
+      s.src = '//codeharddrinkhard.disqus.com/embed.js';
+      s[0].setAttribute('data-timestamp', +new Date())
+      (document.head || document.body).appendChild(s);
+    })();
+  </script>
 
 </article>
